@@ -17,6 +17,7 @@ package org.htmlunit.html;
 import static java.nio.charset.StandardCharsets.UTF_8;
 
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.util.Collections;
@@ -765,12 +766,13 @@ public class HtmlAnchorTest extends WebDriverTestCase {
 
         expandExpectedAlertsVariables(URL_FIRST);
 
-        final URL indexUrl = new URL(URL_FIRST.toString() + "index.html");
+        final URL indexUrl = URI.create(URL_FIRST.toString() + "index.html").toURL();
 
         getMockWebConnection().setResponse(indexUrl, firstContent);
         getMockWebConnection().setResponse(URL_SECOND, secondContent);
 
-        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST.toString() + "index.html?test#ref"));
+        final WebDriver driver =
+                loadPage2(firstContent, URI.create(URL_FIRST.toString() + "index.html?test#ref").toURL());
         driver.findElement(By.id("link")).click();
 
         assertEquals(2, getMockWebConnection().getRequestCount());
@@ -794,12 +796,13 @@ public class HtmlAnchorTest extends WebDriverTestCase {
             + "<body></body>\n"
             + "</html>";
 
-        final URL indexUrl = new URL(URL_FIRST.toString() + "index.html");
+        final URL indexUrl = URI.create(URL_FIRST.toString() + "index.html").toURL();
 
         getMockWebConnection().setResponse(indexUrl, firstContent);
         getMockWebConnection().setResponse(URL_SECOND, secondContent);
 
-        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST.toString() + "index.html?test#ref"));
+        final WebDriver driver =
+                loadPage2(firstContent, URI.create(URL_FIRST.toString() + "index.html?test#ref").toURL());
         driver.findElement(By.id("link")).click();
 
         assertEquals(2, getMockWebConnection().getRequestCount());
@@ -823,12 +826,13 @@ public class HtmlAnchorTest extends WebDriverTestCase {
             + "<body></body>\n"
             + "</html>";
 
-        final URL indexUrl = new URL(URL_FIRST.toString() + "index.html");
+        final URL indexUrl = URI.create(URL_FIRST.toString() + "index.html").toURL();
 
         getMockWebConnection().setResponse(indexUrl, firstContent);
         getMockWebConnection().setResponse(URL_SECOND, secondContent);
 
-        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST.toString() + "index.html?test#ref"));
+        final WebDriver driver =
+                loadPage2(firstContent, URI.create(URL_FIRST.toString() + "index.html?test#ref").toURL());
         driver.findElement(By.id("link")).click();
 
         assertEquals(2, getMockWebConnection().getRequestCount());
@@ -856,12 +860,13 @@ public class HtmlAnchorTest extends WebDriverTestCase {
 
         expandExpectedAlertsVariables(URL_FIRST);
 
-        final URL indexUrl = new URL(URL_FIRST.toString() + "index.html");
+        final URL indexUrl = URI.create(URL_FIRST.toString() + "index.html").toURL();
 
         getMockWebConnection().setResponse(indexUrl, firstContent);
         getMockWebConnection().setResponse(URL_SECOND, secondContent);
 
-        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST.toString() + "index.html?test#ref"));
+        final WebDriver driver =
+                loadPage2(firstContent, URI.create(URL_FIRST.toString() + "index.html?test#ref").toURL());
         new Actions(driver)
                 .keyDown(Keys.CONTROL)
                 .click(driver.findElement(By.id("link")))
